--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -9,9 +9,21 @@ body {
   font-size: 100%;
 }
 
+.cardCollage {
+
+  border-radius: 5px !important;
+}
+
 .cardCollage:hover {
 
   background-color: #A8DADC !important;
+}
+
+#fetchContent {
+
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1000px;
 }
 
 #myChart {
