--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -1,12 +1,17 @@
 /* ISGB13 */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* En hel del !important i CSS-filen pga.
+ * att stylingen krockar med bootstrap. */
 
-body {
+* {
+
+  font-family: monospace, serif;
+  font-size: 100%;
+}
+
+body  {
 
   background-color: #f8f9fa;
-  font-family: monospace;
-  font-size: 100%;
 }
 
 #firstGen {
@@ -49,7 +54,7 @@ body {
   height: 25px;
 }
 
-/* Hjälp med uppdelningen av table från stackoverflow:
+/* Lite hjälp med uppdelningen av table från stackoverflow:
  * https://stackoverflow.com/questions/48328514/how-to-display-table-in-two-columns
  */
 table, tr, td {
@@ -65,7 +70,6 @@ table, tr, td {
 
 #moveListTR {
 
-  /* font-family: 'Roboto', sans-serif !important; */
   font-size: 95% !important;
   float: left !important;
   width: 33% !important;
