--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -14,19 +14,9 @@ body  {
   background-color: #f8f9fa;
 }
 
-#firstGen {
+.firstGen {
 
   text-align: center;
-}
-
-.cardCollage {
-
-  border-radius: 5px !important;
-}
-
-.cardCollage:hover {
-
-  background-color: #A8DADC !important;
 }
 
 #fetchContent {
@@ -34,12 +24,6 @@ body  {
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
-}
-
-#myChart {
-
-  width: 100%;
-  max-width: 600px;
 }
 
 .card {
