--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -18,7 +18,7 @@ body  {
 
   margin-left: auto;
   margin-right: auto;
-  max-width: 1000px;
+  max-width: 1500px;
 }
 
 .card {
@@ -52,4 +52,20 @@ table, tr, td {
   font-size: 95% !important;
   float: left !important;
   width: 33% !important;
+}
+
+@media screen and (max-width: 1532px) {
+
+  #fetchContent {
+
+    max-width: 1100px;
+  }
+}
+
+@media screen and (max-width: 1099px) {
+
+  #fetchContent {
+
+    max-width: 600px;
+  }
 }
