--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -1,12 +1,8 @@
-* {
-
-  font-family: monospace, sans-serif;
-  font-size: 100%;
-}
-
 body  {
 
-  background-color: #f8f9fa;
+  font-family: monospace, sans-serif;
+  background-color: #FFFFFC;
+
   /* Gömmer scroll bar för Edge och Firefox  */
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -18,9 +14,16 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-.firstGen {
+#nav-img {
 
-  text-align: center;
+  height: 25px;
+}
+
+#spinner {
+
+  margin-top: 200px;
+  width: 4rem;
+  height: 4rem;
 }
 
 #fetchContent {
@@ -37,33 +40,10 @@ body::-webkit-scrollbar {
   border-radius: 0;
 }
 
-#nav-img {
-
-  height: 25px;
-}
-
-/* Lite hjälp med uppdelningen av table från stackoverflow:
- * https://stackoverflow.com/questions/48328514/how-to-display-table-in-two-columns
- */
 table, tr, td {
 
   display: block;
 }
-
-#gameList {
-
-  font-size: 85%;
-  float: left;
-  width: 50%;
-}
-
-#moveListTR {
-
-  font-size: 85%;
-  float: left;
-  width: 33%;
-}
-
 
 @media screen and (max-width: 1532px) {
 
