--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+
 body  {
 
-  font-family: monospace, sans-serif;
+  font-family: 'kanit', sans-serif;
   background-color: #FFFFFC;
 
   /* Gömmer scroll bar för Edge och Firefox  */
