--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -20,7 +20,7 @@ body::-webkit-scrollbar {
 
 .bg-danger {
 
-  background-color: #EF476F !important;
+  background-color: #FFFFFC !important;
 }
 
 .btn {
