--- a/Laboration JSON/POKEAPI/style/style.css
+++ b/Laboration JSON/POKEAPI/style/style.css
@@ -84,6 +84,11 @@ table, tr, td {
 
 @media screen and (max-width: 1532px) {
 
+  h1 {
+
+    font-size: 1rem;
+  }
+
   #fetchContent {
 
     max-width: 1100px;
@@ -92,6 +97,11 @@ table, tr, td {
 
 @media screen and (max-width: 1100px) {
 
+  h1 {
+
+    font-size: 1rem;
+  }
+  
   #fetchContent {
 
     max-width: 600px;
